# rust-particle-chart

./: .gitignore  Cargo.toml  README.md  Trunk.toml  deny.toml  index.html
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs  style.css  tauri_bridge.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/serialport-patch/: .cargo_vcs_info.json  Cargo.toml
src-tauri/serialport-patch/src/posix/: ioctl.rs
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/protocol/: mod.rs  parser.rs  rawd.rs
src-tauri/src/serial/: config.rs  manager.rs
src-tauri/tests/: data-example.txt  integration_test.rs
src/components/: channel_chart.rs  mod.rs  serial_config.rs  settings_view.rs  top_nav.rs
