[package]
name = "particle-chart"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlElement", "Element", "Document", "Window", "HtmlSelectElement", "ResizeObserver"] }
charming = { version = "0.6.0", features = ["wasm"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
opt-level = "z"
lto = true
